--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,11 +1,16 @@
+<div class="container">
 <h1>Restaurants</h1>
 
-<ol>
+<br>
+<p><%= link_to "Add a restaurant", new_restaurant_path  %></p>
+
 <% @restaurants.each do |restaurant| %>
-<li><p><%= restaurant.name %></p>
-<p><%= restaurant.address %></p>
-<p><%= restaurant.phone_number %></p>
-<p><%= restaurant.category %></p>
-</li>
-<% end %>
-</ol>
+  <%= link_to restaurant_path(restaurant) do %>
+    <div class="card my-3">
+      <h2><%= restaurant.name %></h2>
+      <% end %>
+      <p><%= restaurant.address %></p>
+      <p><%= restaurant.phone_number %></p>
+      <p><%= restaurant.category %></p>
+      </div>
+  <% end %>
